--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,13 +6,20 @@
 
   <div class = "row">
     <% @items.each do |item|%>
-      <%= link_to item_path(item.id), class: "text-decoration-none col-lg-3 col-md-6 row-md " do %>
+      <%= link_to item_path(item.id), class: "text-decoration-none col-lg-4 col-md-6 row-md " do %>
       <div class= "img-size mx-auto">
         <%= image_tag item.image.variant(resize: '200x200') %>
         </div>
         <div class="g-0 border rounded flex-md-row mb-4 shadow-sm h-md-250 position-relative row">
-          <div class="position-static p-3">
-            <h4 class="mb-1 text-muted"><%= item.name%></h4>
+          <div class="position-static p-3 row">
+            <h5 class="mb-1 text-muted col-10"><%= item.name%></h4>
+            <div class="item col-2">
+          <% if item.account.image.present? %>
+            <%= image_tag item.account.image.variant(resize: '30x30'), class: "rounded-circle" %>
+          <% else %>
+            <%= image_tag "icon.png", variant: { resize: '30x30' }, class: "icon-resize2 rounded-circle" %>
+          <% end %>
+          </div>
             <p class="card-text mb-auto text-muted">
             カテゴリー：<%= item.category.name %><br>
             色：<%= item.color.name %><br>
