--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,36 +1,32 @@
 <%= render "shared/sidebar" %>
-<div class="main container overflow-auto">
-  <div class="bg-light border rounded p-4 mx-auto row">
-    <div class = "d-flex flex-column text-center">
-      <div class = "post-img">
+<div class="bg-light border rounded p-4 mx-auto">
+  <div class = "d-flex flex-column text-center">
+    <div class = "post-img">
       <% @post.items.each do |item| %>
         <%= image_tag item.image.variant(resize: '200x200') %> 
       <% end %>
-      </div>
-      <div class = "mt-3 mb-3">
-        日付：<%= @post.date %><br>
-        天気：<%= @post.weather.name %><br>
-        気温：<%= @post.low.name %>℃ 〜 <%= @post.high.name %>℃<br>
-        <% if @post.content.present? %>
-          <span>メモ：<%= @post.content %></span>
-        <% end %>
-        </div>
     </div>
-      <%# <div class='star-btn'>
-        <%= image_tag "star.png", class:"star-icon me-2 " %>
-        <%# <span class='star-count'>0</span><br>
-      </div> %> 
-      <div class="row d-flex justify-content-center">
+    <div class = "mt-3 mb-1">
+      日付：<%= @post.date %><br>
+      天気：<%= @post.weather.name %><br>
+      気温：<%= @post.low.name %>℃ 〜 <%= @post.high.name %>℃<br>
+      <% if @post.content.present? %>
+        <span>メモ：<%= @post.content %></span>
+      <% end %>
+    </div>
+  </div>
+  <%= link_to account_path(@post.account.id), class: "text-decoration-none col-lg-4 col-md-6 row-md " do %>
+    <div class="d-flex justify-content-center">
+      <% if @post.account.image.present? %>
+        <%= image_tag @post.account.image.variant(resize: '30x30'), class: "rounded-circle" %>
+      <% else %>
+        <%= image_tag "icon.png", variant: { resize: '30x30' }, class: "icon-resize2 rounded-circle" %>
+      <% end %>
+    </div>
+    <% end %>
 
-      <div class="row col mt-3 justify-content-center">
-        <%= link_to "編集", edit_post_path(@post.id), method: :get, class: "btn bg-primary-subtle border border-primary-subtle text-primary-emphasis rounded-pill col-sm-5 ms-1" %>
-        <%= link_to "削除", post_path(@post.id), method: :delete, class: "btn bg-danger-subtle border border-danger-subtle text-danger-emphasis rounded-pill col-sm-5 ms-1" %>
-      </div>
+  <div class="row mt-3 justify-content-center">
+    <%= link_to "編集", edit_post_path(@post.id), method: :get, class: "btn bg-primary-subtle border border-primary-subtle text-primary-emphasis rounded-pill col-4 me-1" %>
+    <%= link_to "削除", post_path(@post.id), method: :delete, class: "btn bg-danger-subtle border border-danger-subtle text-danger-emphasis rounded-pill col-4" %>
   </div>
 </div>
-  <div class="d-flex justify-content-center">
-  <div class="col-8">
-  <%= month_calendar do |date| %>
-    <%= date %>
-  <% end %>
-  </div>
