--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,25 +1,67 @@
 <%= render "shared/sidebar" %>
-<div class="bg-light border rounded p-4 mx-auto">
-  <div class = "d-flex flex-column text-center">
-    <div class = "post-img">
-        <% if @account.image.present? %>
-        <%= image_tag @account.image.variant(resize: '200x200'), class: "rounded-circle" %>
-        <% else %>
-        <%= image_tag "icon.png", variant: { resize: '200x200' }, class: "rounded-circle" %>
-        <% end %>
-
-    </div>
-    <div class = "mt-3 mb-3 ">
-      <%= @account.name %><br>
-      <% if @account.date.present? %>
-        <%= @account.date %>
-      <% end %>
-    </div>
-    <div class="row d-flex justify-content-center">
-      <div class="row col mt-3 d-flex justify-content-center">
-        <%= link_to "編集", edit_account_path(@account.id), method: :get, class: "btn bg-primary-subtle border border-primary-subtle text-primary-emphasis rounded-pill col-4 me-1" %>
-        <%= link_to "削除", account_path(@account.id), method: :delete, data: {confirm:"このアカウントを削除してよろしいですか？"}, class: "btn bg-danger-subtle border border-danger-subtle text-danger-emphasis rounded-pill col-4" %>
+<main class="d-flex flex-column main overflow-auto w-100">
+  <div class="p-4 row">
+      <div class = "post-img col-4">
+          <% if @account.image.present? %>
+          <%= image_tag @account.image.variant(resize: '200x200'), class: "rounded-circle" %>
+          <% else %>
+          <%= image_tag "icon.png", variant: { resize: '200x200' }, class: "rounded-circle" %>
+          <% end %>
       </div>
-    </div>
+      <div class="d-flex flex-column col-7">
+        <div class = "mt-3 mb-3">
+          <%= @account.name %><br>
+          <% if @account.date.present? %>
+            <%= @account.date %>
+          <% end %>
+        </div>
+          <div class="col mt-3">
+            <%= link_to "編集", edit_account_path(@account.id), method: :get, class: "btn bg-primary-subtle border border-primary-subtle text-primary-emphasis rounded-pill col-4 me-1" %>
+            <%= link_to "削除", account_path(@account.id), method: :delete, data: {confirm:"このアカウントを削除してよろしいですか？"}, class: "btn bg-danger-subtle border border-danger-subtle text-danger-emphasis rounded-pill col-4" %>
+          </div>
+        </div>
+      </div>
   </div>
-</div>
+
+  <div class = "row border overflow-x-scroll flex-nowrap h-25 d-flex justify-content-center">
+    <% @items.each do |item|%>
+      <%= link_to item_path(item.id), class: "text-decoration-none col-2" do %>
+      <div class= "mx-auto">
+        <%= image_tag item.image.variant(resize: '90x90') %>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+
+
+    <div class = "row border overflow-x-scroll flex-nowrap h-75">
+    <% @posts.each do |post|%>
+      <%= link_to post_path(post.id), class: "text-decoration-none col-md-4 row-md" do %>
+        <div class="g-0 border rounded flex-md-row mb-4 shadow-sm h-md-250 position-relative row">
+          <div class="col-6 p-4 position-static">
+
+            <h5 class="mb-1 text-muted"><%= post.date%></h5>
+            <div class="row mb-1">
+              <p class="card-text mb-auto text-muted"><%= post.low.name %>℃~<%= post.high.name %>℃ <%= post.weather.name %></p>
+              <p class="deco card-text mb-auto text-muted"><%= post.content %></p>
+            </div>
+          <div class="item col-2">
+          <% if post.account.image.present? %>
+            <%= image_tag post.account.image.variant(resize: '30x30'), class: "rounded-circle" %>
+          <% else %>
+            <%= image_tag "icon.png", variant: { resize: '30x30' }, class: "icon-resize2 rounded-circle" %>
+          <% end %>
+          </div>
+
+          </div>
+          <div class="col-6 d-none d-lg-block align-self-center">
+            <% post.items.each do |item| %>
+              <%= image_tag item.image.variant(resize: '90x90') %>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+
+</main>
