--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-    <%= image_tag "closet-img.jpeg", class: "p-1 mb-4 mt-4 text-white rounded row header-img align-self-center" %>
+    <%= image_tag "closet-img.png", class: "p-1 mb-4 mt-4 text-white rounded row header-img align-self-center" %>
       <div class="header row">
         <div class="col-md-6 px-5 header-text">
           <h1 class="display-4 fst-italic">Closet Curation</h1>
